# Prognos-Advisor-AI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  UI_UX.org  docs.md  get-token.js  package-lock.json  package.json  requirements.txt  todo.txt
backend/: .gitignore  README.md  alembic.ini  auth.py  config.py  db.py  main.py  pyproject.toml  seed_data.py
backend/agents/: dqn_model.py  evaluate_rl.py  goal_agent.py  investment_agent.py  risk_agent.py  rl_env.py  state_encoder.py  strategy_agent.py  train_rl.py
backend/agents/evaluate/: evaluation_results_20260326_220524.json
backend/agents/models/: dqn_weights.npz  evaluation_results.json  training_metrics.csv  training_summary.json
backend/alembic/: env.py
backend/alembic/versions/: 19fb7e877ea7_add_audit_log_table.py  30aadb0826cb_change_prognosis_usage_date_to_datetype.py  afec039b9bd3_initial_migration.py
backend/api/: accounts.py  deps.py  goals.py  profile.py  prognosis.py  transactions.py  user.py
backend/core/: config.py  logging.py  rate_limiter.py  security.py
backend/integrations/: fx_client.py  llm_client.py  market_client.py
backend/models/: __init__.py  account.py  audit_log.py  base.py  enums.py  fx_rate.py  goal.py  profile.py  prognosis.py  recurrence_rule.py  transaction.py  user.py
backend/schemas/: __init__.py  account.py  goal.py  profile.py  prognosis.py  transaction.py  user.py
backend/services/: __init__.py  account_service.py  audit_service.py  goal_service.py  profile_service.py  prognosis_service.py  transaction_service.py  user_service.py
docs/: MVP.md  PRD.md  UI_UX.org  backend.md  frontend.md  latex_paper  ml.md  paper.md  paper.odt  project_report.docx
docs/Paper_Proceedings/: author.tex
frontend/: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+83 files in other folders)
