[project]
name = "prognosis_ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xevansz", email = "minithbmatthew@gmail.com"},
]
dependencies = ["alembic>=1.18.3", "fastapi[standard]>=0.128.4", "psycopg2-binary>=2.9.11"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
