[project]
name = "prognosis_ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xevansz", email = "minithbmatthew@gmail.com"},
]
dependencies = ["alembic>=1.18.3", "fastapi[standard]>=0.128.4", "asyncpg>=0.31.0", "python-jose[cryptography]>=3.5.0", "google-genai>=1.64.0", "tinygrad>=0.12.0", "numpy>=2.4.2", "psycopg2-binary>=2.9.11"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "mypy>=1.19.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
